# gluetun-watchguard

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/gluetun_watchguard/: __init__.py  __main__.py  config.py  connectivity.py  debounce.py  dockerctl.py  gluetun.py  log.py  watchdog.py
src/gluetun_watchguard/clients/: __init__.py  base.py  qbittorrent.py  rutorrent.py  transmission.py
tests/: test_config.py  test_connectivity.py  test_debounce.py  test_dockerctl.py  test_gluetun.py  test_qbittorrent.py  test_watchdog.py
